# rencfs

./: .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.backup  Dockerfile_from_scratch  LICENSE-BSD-3-Clause  LICENSE-MIT  README.md  Ramp-up.md  _config.yml  check-before-push-act.sh  check-before-push-macos.sh  check-before-push-windows.bat  check-before-push.bat  check-before-push.sh  clippy.toml  devcontainer.json  docker-compose.yml  encrypted.enc.REMOVED.git-id  pass.txt  rust-rencfs.spec  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.fleet/: run.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: CI.yml  build_and_tests.yaml  build_and_tests.yml  build_and_tests_reusable.yaml  build_and_tests_reusable.yml  check.yml  clippy.yml  docker_reusable.yml  package_reusable.yaml  package_reusable.yml  release.yaml  release.yml  rust.yml  test  test.yml  tests.yml  version_reusable.yaml  version_reusable.yml
.github/workflows/reusable/: version.yml
_layouts/: default.html
benches/: crypto_read.rs  encryptedfs.rs
docker/: Dockerfile-deb  Dockerfile_from_scratch
docs/: Altenatives.md  Alternatives.md  Cipher_comparison.md  Functionality.md  Key_features.md  Security.md  Stack.md  Usage.md  flows.md
docs/readme/: Build_from_Source.md  Cipher_comparison.md  Considerations.md  Key_features.md  Ramp-up.md  Testing.md  flows.md
docs/uml/: change_pass.md  cli_usage.md  close_file.md  create_file.md  lib_encryptedfs_usage.md  lib_rencfs_usage.md  mount.md  open_file.md  read.md  search_file.md  write.md
examples/: Cargo.toml  README.md  aes_stream.rs  aes_stream_speed.rs  aes_stream_with_writer_seek.rs  arc_hashmap.rs  change_password.rs  change_password_cli.rs  crypto.rs  crypto2.rs  crypto_check.rs  crypto_hash.rs  crypto_speed.rs  crypto_write_read.rs  cryptostream.rs  cryptostream_speed.rs  encrypted_fs_fuse.rs  encryptedfs.rs  encryptedfs_fuse.rs  file_handling.rs  file_layer.rs  filesystem_dbg.rs  fuse3_helllo.rs  fuse3_hello.rs  fuser.rs  internal_arc_hashmap.rs  internal_ring.rs  internal_ring_speed.rs  kill.rs  magic_of_blanket_impl.rs  mount.rs  pbkdf2.rs  rencfs.rs  ring_crypto.rs  ring_speed.rs
examples/src/: change_password.rs  change_password_cli.rs  crypto_speed.rs  crypto_write_read.rs  encryptedfs.rs  internal_crypto_debug.rs  internal_okay_wal.rs  internal_ring.rs  internal_ring_speed.rs  mount.rs
hooks/linux-macos/: pre-commit
hooks/windows/: pre-commit
java-bridge/: Cargo.toml  Makefile  README.md
java-bridge/src/: lib.rs
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin-bridge/: Cargo.toml  Makefile  README.md
kotlin-bridge/src/: lib.rs
kotlin/src/main/kotlin/: Main.kt  Rust.kt
scripts/: check-before-push.bat  check-before-push.sh
scripts/git-hooks/linux-macos/: pre-push
scripts/git-hooks/windows/: pre-push
src/: arc_hashmap.rs  async_util.rs  cipher.rs  crypto.rs  crypto_util.rs  encrypted_fs.rs  encrypted_fs_fuse.rs  encrypted_fs_fuse3.rs  encryptedfs.rs  encryptedfs_fuse3.rs  expire_value.rs  fs_util.rs  keyring.rs  lib.rs  log.rs  main.rs  mount.rs  run.rs  stream_util.rs  test_common.rs  test_util.rs  weak_hashmap.rs
src/cipher/: mod.rs  ring.rs  rust_crypto.rs
src/crypto/: buf_mut.rs  decryptor.rs  encryptor.rs  fs.rs  fs_api.rs  read.rs  reader.rs  write.rs  writer.rs
src/crypto/fs/: test.rs
src/crypto/fs_api/: path.rs
src/crypto/fs_api/async/: fs.rs
src/crypto/fs_api/async/fs/: test.rs
src/crypto/fs_api/path/: test.rs
src/crypto/read/: bench.rs  test.rs
src/crypto/write/: bench.rs  test.rs
src/encrypted_fs/: crypto_util.rs  encrypted_fs_tests.rs  mod.rs
src/encryptedfs/: bench.rs  crypto_util.rs  encryptedfs.rs  encryptedfs_test.rs  moved_test.rs  test.rs  to_move_test.rs
src/mount/: dummy.rs  linux.rs  macos.rs  windows.rs
tests/: rencfs_itest.rs  rencfs_linux_itest.rs
tests/common/: mod.rs
tests/linux_mount_setup/: mod.rs
tests/mount_setup/: mod.rs
