[package]
name = "rencfs"
description = "An encrypted file system that mounts with FUSE on Linux. It can be used to create encrypted directories."
version = "0.13.13"
edition = "2021"
license = "Apache-2.0"
authors = ["Radu Marias <radumarias@gmail.com>"]
homepage = "https://github.com/radumarias/rencfs"
repository = "https://github.com/radumarias/rencfs"
readme = "README.md"
keywords = ["filesystem", "fuse", "encryption", "system", "security"]
categories = ["cryptography", "filesystem"]
documentation = "https://docs.rs/rencfs"
exclude = [".github/"]

[workspace]
members = [".", "examples"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
libc = "0.2.153"
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.58"
rand = "0.8.5"
rand_core = "0.6.4"
base64 = "0.22.1"
#openssl = "=0.10.64"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
futures-util = "0.3.30"
mio = { version = "0.8.11", features = ["os-poll"] }
bytes = "1.5"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-test = "0.2.4"
ctrlc = { version = "3.1.9", features = ["termination"] }
strum = "0.26.2"
strum_macros = "0.26.2"
rpassword = "7.3.1"
#cryptostream = "0.3.2"
anyhow = "1.0.82"
argon2 = "0.5.3"
keyring = "2.3.2"
secrecy = "0.8.0"
retainer = "0.3.0"
num-format = "0.4.4"
ring = "0.17.8"
hex = "0.4.3"
rand_chacha = "0.3.1"
test-log = "0.2.16"
lru = "0.12.3"
okaywal = "0.3.1"
atomic-write-file = "0.1.4"
tempfile = "3.10.1"
async-trait = "0.1.80"
blake3 = "=0.1.3"
thread_local = "1.1.8"

[target.'cfg(unix)'.dependencies]
fuse3 = { version = "0.7.1", features = ["tokio-runtime", "unprivileged"] }

[package.metadata.aur]
depends = ["fuse3"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rencfs", dest = "/usr/bin/rencfs", mode = "755" }
]
[package.metadata.generate-rpm.requires]
fuse3 = "*"
