cargo-features = ["profile-rustflags"]

[package]
name = "rencfs"
description = "An encrypted file system that is mounted with FUSE on Linux. It can be used to create encrypted directories."
version = "0.13.86"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Radu Marias <radumarias@gmail.com>"]
homepage = "https://radumarias.github.io/rencfs"
repository = "https://github.com/radumarias/rencfs"
readme = "README.md"
keywords = ["privacy", "filesystem", "encryption", "security", "cryptography"]
categories = ["cryptography", "filesystem"]
documentation = "https://docs.rs/rencfs"
exclude = [".github/"]

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
libc = "0.2.153"
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1.0.58"
rand = "0.8.5"
rand_core = "0.6.4"
base64 = "0.22.1"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
futures-util = "0.3.30"
bytes = "1.5"
tracing = { version = "0.1.40", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"
tracing-test = "0.2.4"
ctrlc = { version = "3.1.9", features = ["termination"] }
strum = "0.26.2"
strum_macros = "0.26.2"
rpassword = "7.3.1"
anyhow = "1.0.82"
argon2 = "0.5.3"
keyring = "2.3.2"
retainer = "0.3.0"
num-format = "0.4.4"
ring = "0.17.8"
hex = "0.4.3"
rand_chacha = "0.3.1"
lru = "0.12.3"
okaywal = "0.3.1"
atomic-write-file = "0.1.4"
tempfile = "3.10.1"
async-trait = "0.1.80"
blake3 = "=0.1.3"
thread_local = "1.1.8"
subtle = "2.6.1"
bon = "2.2.0"
shush-rs = "0.1.10"

[target.'cfg(target_os = "linux")'.dependencies]
fuse3 = { version = "0.7.2", features = ["tokio-runtime", "unprivileged"] }

[profile.release]
#panic = "abort"
# Treat warnings as errors in release builds
rustflags = ["-Dwarnings"]
lto = true

[package.metadata.aur]
depends = ["fuse3"]
files = [
    [
        "LICENSE-Apache-2.0",
        "/usr/share/licenses/$pkgname/LICENSE-Apache-2.0",
    ],
    [
        "LICENSE-MIT",
        "/usr/share/licenses/$pkgname/LICENSE-MIT",
    ],
    #    ["LICENSE-BSD-3-Clause", "/usr/share/licenses/$pkgname/LICENSE-BSD-3-Clause"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rencfs", dest = "/usr/bin/rencfs", mode = "755" },
    { source = "LICENSE-Apache-2.0", dest = "/usr/share/licenses/rencfs-bin/LICENSE-Apache-2.0", mode = "644" },
    { source = "LICENSE-MIT", dest = "/usr/share/licenses/rencfs-bin/LICENSE-MIT", mode = "644" },
    { source = "LICENSE-BSD-3-Clause", dest = "/usr/share/licenses/rencfs-bin/LICENSE-BSD-3-Clause", mode = "644" },
]
[package.metadata.generate-rpm.requires]
fuse3 = "*"
