[package]
name = "examples"
description = "Examples for rencfs"
version = "0.1.0"
edition = "2021"
authors = ["Radu Marias <radumarias@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/radumarias/rencfs"
keywords = ["filesystem", "fuse", "encryption", "system", "security"]
readme = ""
categories = ["cryptography", "filesystem"]

[[bin]]
name = "change_password"
path = "src/change_password.rs"

[[bin]]
name = "change_password_cli"
path = "src/change_password_cli.rs"

[[bin]]
name = "crypto_write_read"
path = "src/crypto_write_read.rs"

[[bin]]
name = "internal_ring"
path = "src/internal_ring.rs"

[[bin]]
name = "mount"
path = "src/mount.rs"

[[bin]]
name = "crypto_speed"
path = "src/crypto_speed.rs"

[[bin]]
name = "encryptedfs"
path = "src/encryptedfs.rs"

[[bin]]
name = "internal_ring_speed"
path = "src/internal_ring_speed.rs"

[dependencies]
rencfs = { path = "../" }
tokio = { version = "1.36", features = ["full"] }
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7.3.1"
anyhow = "1.0.82"
ring = "0.17.8"
okaywal = "0.3.1"
secrecy = "0.8.0"
bincode = "1.3.3"
rand_core = "0.6.4"
