cargo-features = ["profile-rustflags"]

[package]
name = "java-bridge"
version = "0.1.0"
authors = ["Radu Marias <radumarias@gmail.com>"]

edition = "2021"

[lib]
name = "java_bridge"
crate-type = ["cdylib"]

[profile.release]
panic = "abort"
# Treat warnings as errors in release builds
rustflags = ["-Dwarnings"]
lto = true

[dependencies]
rencfs = { path = "../" }
jni = "0.21.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tokio = { version = "1.39.2", features = ["full"] }
secrecy = "0.8.0"
ctrlc = { version = "3.1.9", features = ["termination"] }
